--- a/clientRss/package.json
+++ b/clientRss/package.json
@@ -17,7 +17,8 @@
     "gsap-trial": "^3.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "standard": "^17.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -30,5 +31,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
