--- a/clientRss/package.json
+++ b/clientRss/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.3.1",
     "gsap": "^3.12.4",
     "gsap-trial": "^3.12.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "rss-parser": "^3.13.0",
     "standard": "^17.1.0"
